# japan-reit

./: .env.example  .gitignore  Makefile  PROJECT_VISION.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: celery_app.py  config.py  database.py  main.py
backend/app/api/v1/: demographics.py  export.py  financial.py  hazards.py  locations.py  pipeline.py  properties.py  router.py  scoring.py  scraping.py
backend/app/clients/: base_client.py  hazard_map.py  jshis.py  reinfolib.py
backend/app/models/: __init__.py  demographics.py  financial.py  hazard.py  location.py  new_schema.py  property.py  scoring.py  scraping.py
backend/app/scrapers/: __init__.py  akiya.py  athome.py  base.py  bit_auction.py  homes.py  registry.py  suumo.py
backend/app/seed/: prefectures.py  run.py  scrape_sources.py
backend/app/services/: dedup_service.py  financial_service.py  geocoding_service.py  hazard_service.py  image_upload_service.py  property_service.py  scoring_engine.py  supabase_property_service.py  translate_service.py
backend/app/tasks/: enrichment_tasks.py  export_tasks.py  runner.py  scoring_tasks.py  scraping_tasks.py
backend/app/utils/: currency.py  date_helpers.py  japanese_address.py  mesh_code.py
backend/scripts/: coord_stats.py  fix_addresses.py  geocode_all.py
backend/tests/: conftest.py
backend/tests/test_services/: test_financial.py
backend/tests/test_utils/: test_japanese_address.py  test_mesh_code.py
nginx/: nginx.conf
(+25 files in other folders)
